--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: minimal
-title: "About me"
+title: "About US"
 permalink: /about/index.html
 description: "Some description about Lorem Ipsum..."
 ---
